Added the entire javascript function , some styles on css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="client.js" defer></script>
+    <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <div class="container"></div>
-    <script src="client.js"></script>
+    <div class="page">
+      <input type="button" value="Reset" />
+      <div class="container"></div>
+      <input type="button" value="Clear" id="clear" />
+    </div>
+    <script src="client.js" defer></script>
   </body>
 </html>
