Just did some last changes to the Ui and its finished !

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <div class="page">
-      <input type="button" value="Reset" />
-      <div class="container"></div>
-      <input type="button" value="Clear" id="clear" />
+      <button id="resetButton">Reset Grid</button>
+      <div id="gridContainer"></div>
     </div>
     <script src="client.js" defer></script>
   </body>
